--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "sse": "node sse.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,8 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "websocket": "^1.0.34"
   }
 }
